# testing_order

./: Dockerfile  pyproject.toml
orderservice/: db.py  main.py  models.py
