[tool.poetry]
name = "orderservice"
version = "0.1.0"
description = ""
authors = ["Saim khalid <saimkhalid6220@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
